[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ura-efris-sdk"
version = "0.1.0"
description = "Python SDK for Uganda Revenue Authority (URA) EFRIS API"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "Emmanuel Bartile", email = "emmanuel@paybill.co.ke" }
]

maintainers = [
  { name = "Emmanuel Bartile", email = "emmanuel@paybill.co.ke" }
]

keywords = [
  "URA",
  "EFRIS", 
  "Uganda",
  "Tax",
  "eInvoicing",
  "Fiscal",
  "SDK",
  "API"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

dependencies = [
  "pydantic>=2.0,<3.0",
  "cryptography>=40.0,<45.0",
  "pycryptodome>=3.21,<4.0",
  "pytz>=2023.3",
  "requests>=2.31.0,<3.0",
]

[project.optional-dependencies]
# Development & Testing
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "pytest-asyncio>=0.21.0",
  "responses>=0.23.0",
  "black>=23.0",
  "ruff>=0.1.0",
  "mypy>=1.5.0",
  "pre-commit>=3.4.0",
]

# Documentation
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=1.3",
  "myst-parser>=2.0",
]

# Async support (future)
async = [
  "httpx>=0.25.0",
  "aiofiles>=23.0",
]

# All extras combined
all = [
  "ura-efris-sdk[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/paybillke/ura-efris-python-sdk"
Documentation = "https://paybill.ke/docs/ura-efris"
Repository = "https://github.com/paybillke/ura-efris-python-sdk.git"
Issues = "https://github.com/paybillke/ura-efris-python-sdk/issues"
Changelog = "https://paybill.ke/docs/ura-efris/change-log"

[tool.setuptools.packages.find]
where = ["."]
include = ["ura_efris_sdk*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
ura_efris_sdk = ["py.typed"]

# =========================================================
# TESTING CONFIGURATION
# =========================================================

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
  "-ra",
  "-q",
  "--strict-markers",
  "--strict-config",
  "--cov=ura_efris_sdk",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-report=xml:coverage.xml",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*", "*Test"]
python_functions = ["test_*"]
markers = [
  "unit: Unit tests (no network)",
  "integration: Integration tests (live API)",
  "e2e: End-to-end flow tests",
  "slow: Tests that take >1 second",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
  "ignore::PendingDeprecationWarning",
]

# =========================================================
# CODE QUALITY & LINTING
# =========================================================

[tool.ruff]
target-version = "py39"
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "RUF", # ruff-specific rules
]
ignore = [
  "E501",  # Line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["ura_efris_sdk"]
known-third-party = ["pydantic", "cryptography", "Crypto", "requests", "pytz"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =========================================================
# TYPE CHECKING
# =========================================================

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
  "Crypto.*",
  "cryptography.*",
  "pytz",
  "requests.*",
]
ignore_missing_imports = true

# =========================================================
# COVERAGE CONFIGURATION
# =========================================================

[tool.coverage.run]
source = ["ura_efris_sdk"]
branch = true
omit = [
  "*/__init__.py",
  "*/tests/*",
  "*/venv/*",
  "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "class .*\\bProtocol\\):",
  "@(abc\\.)?abstractmethod",
]

# =========================================================
# BUILD CONFIGURATION
# =========================================================

[tool.setuptools.dynamic]
# Optional: Load version from file instead of hardcoding
# version = { attr = "ura_efris_sdk.__version__" }

[tool.setuptools]
zip-safe = false
include-package-data = true

# =========================================================
# PRE-COMMIT HOOKS (via .pre-commit-config.yaml reference)
# =========================================================

# Note: Create .pre-commit-config.yaml separately with:
# - black
# - ruff
# - mypy
# - pytest-check